[package]

name = "dioxus-tw-components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Components made for Dioxus using TailwindCSS 3."
readme = "readme.md"
repository = "https://github.com/42Angouleme/dioxus-components"
keywords = ["dom", "gui", "dioxus", "components"]
categories = ["gui", "wasm"]
authors = ["Louis Truchelut", "kbz_8", "Ziale"]

[lib]

name = "dioxus_tw_components"
path = "src/lib.rs"

[features]

theme = []

[dependencies]

sorttable-macro = { path = "./sorttable-macro" }
dioxus-components-macro = { path = "./dioxus-components-macro" }
log = "0.4.22"
dioxus = { version = "0.6.3", features = ["web"] }
dioxus-logger = "0.6.2"
manganis = "0.6.2"
console = "0.15.10"
tailwind_fuse = { version = "0.3.2", features = ["variant"] }

serde_json = "1.0.139"

slugify = "0.1.0"

chrono = "0.4.39"
strum = { version = "0.27.1", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["time"] }
