[package]
name = "dioxus-components-macro"
version = "0.1.0"
edition = "2021"
authors = ["Louis Truchelut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
authors = ["Louis Truchelut"]

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
