[package]
name = "dioxus-tw-components-macro"
version = "0.1.0"
edition = "2024"
authors = ["Louis Truchelut"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
authors = ["Louis Truchelut"]

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
