[package]
name = "dioxus_tw_components_docsite"
version = "0.1.0"
edition = "2021"
authors = ["Louis Truchelut", "kbz_8", "Ziale"]

[[bin]]
name = "dioxus_components_bin_docsite"
authors = ["Louis Truchelut", "kbz_8", "Ziale"]
path = "src/docsite/main.rs"

[dependencies]

docsite-macro = { path = "./docsite-macro" }
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-logger = "0.4.1"
manganis = "0.2.2"
console_error_panic_hook = "0.1.7"
log = "0.4.25"
tracing-wasm = "0.2.1"
tracing = "0.1.41"
console = "0.15.10"

dioxus-tw-components = { path = "../.", features = ["theme"] }
chrono = "0.4.39"

[workspace]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# Used to isolate this crate from a possible workspace
